<resources>
    <string name="app_name">TicTacToe</string>
    <string name="turn">TURN</string>
    <string name="todo">TODO</string>
    <string name="ok">TODO</string>
    <string name="img">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="ties">TIES</string>
    <string name="_0">0</string>
    <string name="_00">0</string>
    <string name="_000">0</string>
    <string name="d">TODO</string>
    <string name="pick_player_1_s_mark">PICK PLAYER 1\'S MARK</string>
    <string name="textview">TextView</string>
    <string name="imgbtn">TODO</string>
    <string name="new_game_vs_cpu">NEW GAME (VS CPU)</string>
    <string name="new_game_vs_player">NEW GAME (VS PLAYER)</string>
    <string name="remember_x_goes_first">REMEMBER : X GOES FIRST</string>
</resources>