<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#172833"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/imageButton10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="144dp"
        android:background="#172833"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/x3" />

    <ImageView
        android:id="@+id/imageButton11"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="142.2dp"
        android:background="#172833"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/o1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="#29475A"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="65dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="65dp"
            android:background="#172833"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:backgroundTint="#172833"
                app:cardCornerRadius="40dp">

                <ImageButton
                    android:id="@+id/xButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#172833"
                    android:contentDescription="@string/imgbtn"
                    android:src="@drawable/x3"
                    app:tint="#C7D6CE"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:backgroundTint="#172833"
                app:cardCornerRadius="40dp">

                <ImageButton
                    android:id="@+id/oButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#C7D6CE"
                    android:contentDescription="@string/d"
                    app:srcCompat="@drawable/o3"
                    app:tint="@color/darkgreen"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:text="@string/pick_player_1_s_mark"
            android:textColor="#C7D6CE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="74dp"
            android:text="@string/remember_x_goes_first"
            android:textColor="#C7D6CE"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/cpuButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#EAD838"
        android:elevation="100dp"
        android:text="@string/new_game_vs_cpu"
        android:textColor="#172833"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/plButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#78E3AB"
        android:elevation="100dp"
        android:text="@string/new_game_vs_player"
        android:textColor="#172833"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpuButton"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>