<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#172833"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#29475A"

        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:letterSpacing=".11"
            android:text="@string/turn"
            android:textColor="#B0B5B4"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/x1"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:background="#172833"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.278"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#172833"
                android:elevation="0dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    tools:ignore="NestedWeights">

                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription,DuplicateSpeakableTextCheck,ImageContrastCheck" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    tools:ignore="NestedWeights">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp">

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp">

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    tools:ignore="NestedWeights">

                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp">

                    <ImageButton
                        android:id="@+id/imageButton8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp">

                    <ImageButton
                        android:id="@+id/imageButton9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#29475A"
                        android:contentDescription="@string/ok"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    <ImageView
        android:id="@+id/imageButton10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:background="#172833"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/x3" />

    <ImageView
        android:id="@+id/imageButton11"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20.2dp"
        android:background="#172833"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/o1" />

    <ImageButton
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C7D6CE"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toEndOf="@+id/imageButton11"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_autorenew_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:backgroundTint="#4B7691"
            app:cardCornerRadius="20dp"

            >

            <TextView
                android:id="@+id/xScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/_000"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/xImage"
                android:layout_width="26dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                app:srcCompat="@drawable/x1"
                android:importantForAccessibility="no" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:backgroundTint="#C7D6CE"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/oTies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/_00"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:letterSpacing=".0001"
                android:text="@string/ties"
                android:textColor="#494646"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:backgroundTint="#4B7691"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/oScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/oImage"
                android:layout_width="26dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                app:srcCompat="@drawable/o1"
                android:importantForAccessibility="no" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C7D6CE"
        app:layout_constraintEnd_toStartOf="@+id/restart"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_242"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>